syntax = "proto3";

package Watchdog.Api;

option csharp_namespace = "Watchdog.Agent.Protos";

// Service for agents to connect to
service AgentService {
  // Agent registers with control plane
  rpc RegisterAgent (AgentRegistrationRequest) returns (AgentRegistrationResponse);

  // Agent reports status
  rpc ReportStatus (StatusReportRequest) returns (StatusReportResponse);

  // Bi-directional stream for real-time communication
  rpc CommandStream (stream AgentMessage) returns (stream ControlPlaneMessage);
}

// Messages for agent -> control plane
message AgentRegistrationRequest {
  string agent_id = 1;
  string agent_name = 2;
  string ip_address = 3;
  string hostname = 4;
  int32 total_memory_mb = 5;
  int32 cpu_cores = 6;
  string os_version = 7;
}

message StatusReportRequest {
  string agent_id = 1;
  repeated ApplicationStatus application_statuses = 2;
  SystemMetrics system_metrics = 3;
  int64 timestamp = 4;
}

message AgentMessage {
  oneof message {
    Heartbeat heartbeat = 1;
    ApplicationSpawned spawned = 2;
    ApplicationStopped stopped = 3;
    ErrorReport error = 4;
  }
}

// Messages for control plane -> agent
message ControlPlaneMessage {
  oneof message {
    SpawnCommand spawn = 1;
    KillCommand kill = 2;
    RestartCommand restart = 3;
    UpdateCommand update = 4;
  }
}

// Common messages
message AgentRegistrationResponse {
  bool success = 1;
  string message = 2;
  string assigned_id = 3;
  repeated ApplicationAssignment applications = 4;
}

message StatusReportResponse {
  bool success = 1;
  string message = 2;
  repeated CommandRequest pending_commands = 3;
}

message ApplicationStatus {
  string application_id = 1;
  string instance_id = 2;
  string status = 3;  // Running, Stopped, Starting, Error
  double cpu_percent = 4;
  double memory_mb = 5;
  repeated PortMapping ports = 6;
  string health_status = 7;  // Healthy, Unhealthy, Unknown
  int64 start_time = 8;
  string process_id = 9;
}

message ApplicationAssignment {
  string application_id = 1;
  string application_name = 2;
  string executable_path = 3;
  string arguments = 4;
  string working_directory = 5;
  int32 desired_instances = 6;
  repeated PortRequirement ports = 7;
  map<string, string> environment_variables = 8;
  string health_check_url = 9;
  int32 health_check_interval = 10;
}

message PortRequirement {
  string name = 1;
  int32 internal_port = 2;
  string protocol = 3;  // TCP, UDP
  bool required = 4;
}

message PortMapping {
  string name = 1;
  int32 internal_port = 2;
  int32 external_port = 3;
  string protocol = 4;
}

// Command messages
message SpawnCommand {
  string application_id = 1;
  string instance_id = 2;
  string executable_path = 3;
  string arguments = 4;
  string working_directory = 5;
  map<string, string> environment_variables = 6;
  repeated PortMapping ports = 7;
  string health_check_url = 8;
  int32 health_check_interval = 9;
  int32 instance_index = 10;
}

message KillCommand {
  string instance_id = 1;
  bool force = 2;
  int32 timeout_seconds = 3;
}

message RestartCommand {
  string instance_id = 1;
  int32 timeout_seconds = 2;
}

message UpdateCommand {
  string instance_id = 1;
  map<string, string> environment_variables = 2;
}

message CommandRequest {
  string command_id = 1;
  string command_type = 2;  // SPAWN, KILL, RESTART, UPDATE
  string application_id = 3;
  string instance_id = 4;
  string parameters = 5;  // JSON
  int64 timestamp = 6;
  string agent_id = 7;
}

// Status messages
message Heartbeat {
  string agent_id = 1;
  int64 timestamp = 2;
}

message ApplicationSpawned {
  string instance_id = 1;
  string application_id = 2;
  int32 process_id = 3;
  repeated PortMapping ports = 4;
  int64 start_time = 5;
}

message ApplicationStopped {
  string instance_id = 1;
  string application_id = 2;
  int32 exit_code = 3;
  string reason = 4;
  int64 stop_time = 5;
}

message ErrorReport {
  string agent_id = 1;
  string error_type = 2;
  string error_message = 3;
  string stack_trace = 4;
  int64 timestamp = 5;
}

message SystemMetrics {
  double cpu_percent = 1;
  double memory_percent = 2;
  double disk_percent = 3;
  int32 total_processes = 4;
  int64 uptime_seconds = 5;
}